--- a/sites/all/themes/itg/sass/media.scss
+++ b/sites/all/themes/itg/sass/media.scss
@@ -2858,6 +2858,9 @@
   .view-archive-story{
     .view-content{
       .itg-search-list{
+        display: inline-block;
+        vertical-align: top;
+        width: 100%;
         padding: 25px 0;
         + li{
           border-top: 1px solid #ddd;
@@ -2866,7 +2869,7 @@
           width: 170px;
           float: left;
         }
-        > .views-field-label, > .search-detail{
+        > .views-field-label, > .search-detail, > .other-info{
           padding-left: 180px;
         }
         .views-field-label{
