Worked on octopus

--- a/sites/all/modules/custom/itg_octopus_api/css/itg_octopus_api.css
+++ b/sites/all/modules/custom/itg_octopus_api/css/itg_octopus_api.css
@@ -12,11 +12,21 @@ and open the template in the editor.
 .bg-red{background-color: red; color: #fff;}
 .bg-green{background-color: green; color: #fff;}
 .bg-yellow{background-color: yellow;}
+tr.octopus-slug-data-row{
+    background: aliceblue;
+    position: relative;
+}
+.remove-data{
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    font-size: 20px;
+    cursor: pointer;
+}
 .slug-details{
     display: inline-block;
     vertical-align: top;
     width: 100%;
-    background: #fff;
   }
   .slug-video{
     float: right;
