--- a/sites/all/modules/custom/itg_octopus_api/css/itg_octopus_api.css
+++ b/sites/all/modules/custom/itg_octopus_api/css/itg_octopus_api.css
@@ -22,6 +22,7 @@ tr.octopus-slug-data-row{
     top: 5px;
     font-size: 20px;
     cursor: pointer;
+    z-index:99999;
 }
 .slug-details{
     display: inline-block;
