ITG-4164 #time 1h #comment done.

--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -2338,9 +2338,28 @@ div.image-widget-data .ajax-progress-throbber{display: none;}
     }
   }
 }
-.node-ugc-form{
-  .form-actions{
-    .form-submit{
+[id*="itg-ugc-inqueue-form"]{
+  .form-type-textfield, .form-type-select{
+    padding: 0 10px 0 0;
+    margin: 10px 0;
+    float: left;
+    input[type="text"], select{
+      width: 100%;
+    }
+    > label{
+      float: none;
+      display: block;
+    }
+    .user-log-filter-btn{
+      float: left;
+      margin-top: 38px;
+      .form-submit{
+        @extend .btn-small;
+      }
+      .user-log-reset{
+        @extend .btn-reset;
+        @extend .btn-small;
+      }
     }
   }
 }
