--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -4606,7 +4606,13 @@ h1.category-heading{
 .view-programmes.view-display-id-page{
   @include pager;
 }
-
+.survey-video-wrapper{
+  .survey-video {
+    position: relative;
+    height: 0;
+    padding-bottom: 56.25%;
+  }
+}
 /*css start archive-story */
 .view-archive-story{
     .view-content{
