--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -4607,10 +4607,18 @@ h1.category-heading{
   @include pager;
 }
 .survey-video-wrapper{
+  max-width: 480px;
   .survey-video {
     position: relative;
     height: 0;
     padding-bottom: 56.25%;
+    iframe {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
   }
 }
 /*css start archive-story */
