--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -9620,6 +9620,9 @@ div.node{
       right: 532px;
     }
   }
+  .form-field-name-field-story-reporter{
+    span.error{padding-left: 220px;}
+  }
 }
 [id*="domain-form"]{
   .form-submit{
