resolve ui issues

--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -6308,7 +6308,7 @@ h1.category-heading {
   top: 0;
   left: 0;
 }
-.survey-media-wrapper .survey-image, .survey-media-wrapper quiz-image, .quiz-media-wrapper .survey-image, .quiz-media-wrapper quiz-image {
+.survey-media-wrapper .survey-image, .survey-media-wrapper .quiz-image, .quiz-media-wrapper .survey-image, .quiz-media-wrapper .quiz-image {
   margin: 0 0 10px 10px;
 }
 
