--- a/sites/all/themes/itgadmin/css/styles.css
+++ b/sites/all/themes/itgadmin/css/styles.css
@@ -8115,9 +8115,9 @@ div.node #comments h2 {
 }
 
 .survey-form-main-container .byline .social-info span {
-  float: left;
-  width: 25%;
-  padding: 5px;
+  display: inline-block;
+  vertical-align: top;
+  margin-left: 30px;
   text-align: center;
 }
 
@@ -8187,15 +8187,10 @@ div.node #comments h2 {
   border-radius: 1px !important;
   box-shadow: 0 1px 3px 0 #666;
   background: red;
-  /* For browsers that do not support gradients */
   background: -webkit-linear-gradient(#4fb5ff, #0986e0);
-  /* For Safari 5.1 to 6.0 */
   background: -o-linear-gradient(#4fb5ff, #0986e0);
-  /* For Opera 11.1 to 12.0 */
   background: -moz-linear-gradient(#4fb5ff, #0986e0);
-  /* For Firefox 3.6 to 15 */
   background: linear-gradient(#4fb5ff, #0986e0);
-  /* Standard syntax */
   font-size: 18px !important;
   font-family: Roboto;
   color: #fff;
@@ -8203,6 +8198,27 @@ div.node #comments h2 {
   margin-right: 20px !important;
   margin-top: 20px;
   cursor: pointer;
+  line-height: normal;
+}
+
+.survey-media-wrapper, .quiz-media-wrapper {
+  max-width: 480px;
+}
+.survey-media-wrapper .survey-video, .survey-media-wrapper .quiz-video, .quiz-media-wrapper .survey-video, .quiz-media-wrapper .quiz-video {
+  position: relative;
+  height: 0;
+  padding-bottom: 56.25%;
+  margin: 0 0 10px 10px;
+}
+.survey-media-wrapper .survey-video iframe, .survey-media-wrapper .quiz-video iframe, .quiz-media-wrapper .survey-video iframe, .quiz-media-wrapper .quiz-video iframe {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.survey-media-wrapper .survey-image, .survey-media-wrapper .quiz-image, .quiz-media-wrapper .survey-image, .quiz-media-wrapper .quiz-image {
+  margin: 0 0 10px 10px;
 }
 
 [id*="itg-survey-survey-form"] .success-message, [id*="itg-survey-survey-form"] .search-criteria + .success, [id*="itg-survey-survey-form"] .messages--status {
