--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -7784,9 +7784,9 @@ div.node{
   font: 400 12px/18px Roboto;
 }
 .survey-form-main-container .byline .social-info span {
-  float: left;
-  width: 25%;
-  padding: 5px;
+  display: inline-block;
+  vertical-align: top;
+  margin-left: 30px;
   text-align: center;
 }
 .survey-form-main-container .byline .social-info span .fa {
@@ -7845,15 +7845,10 @@ div.node{
   border-radius: 1px !important;
   box-shadow: 0 1px 3px 0 #666;
   background: red;
-  /* For browsers that do not support gradients */
   background: -webkit-linear-gradient(#4fb5ff, #0986e0);
-  /* For Safari 5.1 to 6.0 */
   background: -o-linear-gradient(#4fb5ff, #0986e0);
-  /* For Opera 11.1 to 12.0 */
   background: -moz-linear-gradient(#4fb5ff, #0986e0);
-  /* For Firefox 3.6 to 15 */
   background: linear-gradient(#4fb5ff, #0986e0);
-  /* Standard syntax */
   font-size: 18px !important;
   font-family: Roboto;
   color: #fff;
@@ -7861,7 +7856,28 @@ div.node{
   margin-right: 20px !important;
   margin-top: 20px;
   cursor: pointer;
+  line-height: normal;
 }
+.survey-media-wrapper, .quiz-media-wrapper{
+  max-width: 480px;
+  .survey-video, .quiz-video{
+    position: relative;
+    height: 0;
+    padding-bottom: 56.25%;
+    margin: 0 0 10px 10px;
+    iframe {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+  }
+  .survey-image, .quiz-image{
+    margin: 0 0 10px 10px;
+  }
+}
+
 [id*="itg-survey-survey-form"] .success-message, [id*="itg-survey-survey-form"] .messages--status {
   font-size: 18px;
 }
