--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -4622,7 +4622,7 @@ h1.category-heading{
     }
   }
   .survey-image, .quiz-image{
-    margin: 0 0 10px 10px;
+    margin: 0 0 10px 0;
   }
 }
 /*css start archive-story */
@@ -11100,7 +11100,6 @@ span.smilies-title {
       }
     }
     #show_answer{
-      width: 135px;
       margin: 10px auto;
       display: block;
       border-radius: 1px;
