--- a/sites/all/modules/custom/itg_octopus_api/css/itg_octopus_api.css
+++ b/sites/all/modules/custom/itg_octopus_api/css/itg_octopus_api.css
@@ -41,7 +41,7 @@ tr.octopus-slug-data-row{
     padding: 20px;
     text-align: left;
   }
-  .slug-data li{display: inline-block; vertical-align: top; width: 100%;}
+  .slug-data li{display: inline-block; vertical-align: top; width: 100%; padding-bottom: 10px;}
   .slug-data li + li{margin-top: 5px;}
   .slug-data li strong{float: left; width: 150px;}
   .slug-data li span{display: block; overflow: hidden;}
