--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -9057,6 +9057,7 @@ div#playerContainer{
         .social-icon{
             max-width: 108px;
             padding-top: 65px;
+            float: right;
             a{
                 color: #aaa9a9;
                 font-size: 13px;
