--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -12162,3 +12162,7 @@ fieldset#edit-xmlsitemap{
     tbody td{border: none;}
   } 
 }
+.progress .percentage {
+    float: right;
+    margin-left: 10px;
+}
