--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -11998,7 +11998,9 @@ span.close_btt {
     }
   }
 }
-
+.not-front .watch-right-now-video h3 {
+    display: none;
+}
 
 @media (min-width: 320px) {
   .view-front-end-global-search .view-content .itg-search-list > .search-detail,
