--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -1909,7 +1909,7 @@ footer .multiple-items-footer i.slick-next {
 }
 
 .section-ordering a {
-  display: block;
+  display: inline;
 }
 .section-ordering h3 {
   padding: 10px 0;
@@ -14770,6 +14770,16 @@ span.close_btt {
 
 .not-front .watch-right-now-video h3 {
   display: none;
+}
+
+span.see-picture a {
+  color: #a00606;
+}
+span.see-picture a:hover {
+  color: #a00606;
+}
+span.see-picture a:after {
+  content: ':';
 }
 
 @media (min-width: 320px) {
