--- a/sites/all/themes/itgadmin/css/styles.css
+++ b/sites/all/themes/itgadmin/css/styles.css
@@ -12966,3 +12966,7 @@ fieldset#edit-xmlsitemap {
   float: right;
   margin-left: 10px;
 }
+
+[id*="views-exposed-form-sold-item-history-page"] .views-widget-filter-created > label, [id*="views-exposed-form-sold-item-history-page"] .views-widget-filter-created .description {
+  display: none !important;
+}
