--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -3224,7 +3224,7 @@ footer .multiple-items-footer i.slick-next {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 99;
+  z-index: 99999999;
   background: rgba(0, 0, 0, 0.76);
   display: none;
 }
@@ -12507,7 +12507,7 @@ h1.about-us-heading + div p {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 99;
+  z-index: 99999999;
   background: rgba(0, 0, 0, 0.76);
   display: none;
 }
