--- a/sites/all/themes/itg/sass/_itg-mixins.scss
+++ b/sites/all/themes/itg/sass/_itg-mixins.scss
@@ -501,7 +501,7 @@ $root-font-size: 16px;
         left: 0;
         width: 100%;
         height: 100%;
-        z-index: 99;
+        z-index: 99999999;
         background:rgba(0, 0, 0, 0.76);
         display:none;
         .big-story-popup{
