ITG-2323 #time 1h #comment done.

--- a/sites/all/themes/itgadmin/css/styles.css
+++ b/sites/all/themes/itgadmin/css/styles.css
@@ -4480,7 +4480,9 @@ div#autocomplete ul li + li {
   border-top: 1px solid #f5f5f5;
 }
 div#autocomplete ul li div {
+  white-space: normal;
   word-wrap: break-word;
+  max-width: 100%;
 }
 
 div.node a {
