--- a/sites/all/themes/itg/sass/styles-new.scss
+++ b/sites/all/themes/itg/sass/styles-new.scss
@@ -4258,7 +4258,7 @@ div#forgot-field-heading {
   #umail:after{
     content: 'OR';
     position: absolute;
-    left: 278px;
+    left: 95.5%;
     top: 10px;
     margin: 0 auto;
     width: 25px;
