--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -6219,6 +6219,7 @@ div.node{
     .date-padding .form-item > label{display: none;}
     .date-padding input[type="text"]{width: 100%;}
   }
+  .description{left: 100% !important;}
 }
 .node-print_team_integration-form{
   .form-field-name-field-pti-words-limit{
