--- a/sites/all/themes/itg/css/media.css
+++ b/sites/all/themes/itg/css/media.css
@@ -447,14 +447,6 @@
   }
 
   /*search page css end */
-  #block-itg-live-tv-live-tv-video-page .program-livetv .live_tv_video {
-    max-width: 82%;
-    padding-bottom: 46.5%;
-  }
-  #block-itg-live-tv-live-tv-video-page .program-livetv .social-icon {
-    width: 18%;
-    padding-top: 10px;
-  }
 }
 @media only screen and (min-width: 991px) and (max-width: 1024px) {
   .sport-home-layout-page .itg-layout-615 .droppable,
@@ -592,14 +584,6 @@
   }
 
   /*budget page css end*/
-  #block-itg-live-tv-live-tv-video-page .program-livetv .live_tv_video {
-    max-width: 83%;
-    padding-bottom: 47%;
-  }
-  #block-itg-live-tv-live-tv-video-page .program-livetv .social-icon {
-    width: 17%;
-    padding-top: 0px;
-  }
 }
 @media only screen and (max-width: 768px) {
   .block-itg-ads {
@@ -1900,14 +1884,20 @@
     width: 100%;
   }
   #block-itg-live-tv-live-tv-video-page .program-livetv {
-    padding: 10px;
+    padding: 10px 10px 0;
+    display: block;
   }
-  #block-itg-live-tv-live-tv-video-page .program-livetv .social-icon {
+  #block-itg-live-tv-live-tv-video-page .program-livetv .social-icon, #block-itg-live-tv-live-tv-video-page .program-livetv .live_tv_video {
     width: 100%;
   }
   #block-itg-live-tv-live-tv-video-page .program-livetv .live_tv_video {
-    max-width: none;
     padding-bottom: 56.25%;
+  }
+  #block-itg-live-tv-live-tv-video-page .program-livetv .social-icon {
+    padding-top: 0;
+  }
+  #block-itg-live-tv-live-tv-video-page .program-livetv .social-icon > ul {
+    position: relative;
   }
   #block-itg-live-tv-live-tv-video-page .program-livetv .social-icon li {
     display: inline-block;
@@ -1924,6 +1914,14 @@
   }
   #block-itg-live-tv-live-tv-video-page .program-livetv .social-icon li a span {
     display: none;
+  }
+  #block-itg-live-tv-live-tv-video-page .program-livetv .social-icon .show-embed-code-link {
+    position: static;
+  }
+  #block-itg-live-tv-live-tv-video-page .program-livetv .social-icon .show-embed-code-link .show-embed-code-div {
+    transform: none;
+    width: 100%;
+    left: 0;
   }
 
   /*css end live tv page*/
