--- a/sites/all/themes/itg/sass/styles-new.scss
+++ b/sites/all/themes/itg/sass/styles-new.scss
@@ -5237,10 +5237,10 @@ article.node-mega-review-critic .movie-review-wrapper .movie-review-text .movie-
       padding-top: 10px;
       z-index: 99999;
       .copy-sample-code{
-        background-color: #fff;        
+        background-color: #fff;
         position: relative;
-        box-shadow: 0 0 10px #666;
-        &:before {
+        box-shadow: 0px 5px 20px -5px #000;
+/*        &:before {
           border-color: transparent transparent #fff transparent;
           border-style: solid;
           border-width: 11px;
@@ -5252,7 +5252,7 @@ article.node-mega-review-critic .movie-review-wrapper .movie-review-text .movie-
           left: 0;
           right: 0;
           margin: 0 auto;
-        }
+        }*/
         textarea {
             border: 1px solid #fff;
             min-height: 100px;
