--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -10379,7 +10379,7 @@ h1.about-us-heading{
                 cursor: pointer;
             }
             .messages.error{
-                display: none;
+                display: block;
             }  
             .form-managed-file .image-widget-data .form-submit[value="Remove"]{
                 position: relative;
