resolve ui issues

--- a/sites/all/themes/itgadmin/css/styles.css
+++ b/sites/all/themes/itgadmin/css/styles.css
@@ -12997,3 +12997,7 @@ fieldset#edit-xmlsitemap {
   top: 10px;
   margin: 0;
 }
+
+.form-field-name-field-newsl-newsletter-content .description {
+  left: 1024px !important;
+}
