--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -12200,3 +12200,4 @@ fieldset#edit-xmlsitemap{
     margin: 0;
   }
 }
+.form-field-name-field-newsl-newsletter-content .description { left:1024px !important;}
